load("@rules_cc//cc:defs.bzl", "cc_toolchain")
load("@bazel_tools//tools/cpp:unix_cc_toolchain_config.bzl", "cc_toolchain_config")

filegroup(
    name = "wasm_cc_tools",
    srcs = [
        "noop_cc.sh",
        "wasm32_ar.sh",
        "wasm32_cc.sh",
    ],
)

cc_toolchain_config(
    name = "wasm_cc_config",
    toolchain_identifier = "wasm32-none",
    host_system_name = "local",
    target_system_name = "wasm32-unknown-none",
    cpu = "wasm32",
    target_libc = "unknown",
    compiler = "clang",
    abi_version = "unknown",
    abi_libc_version = "unknown",
    tool_paths = {
        "gcc": "wasm32_cc.sh",
        "ld": "noop_cc.sh",
        "ar": "wasm32_ar.sh",
        "cpp": "wasm32_cc.sh",
        "gcov": "noop_cc.sh",
        "nm": "noop_cc.sh",
        "objdump": "noop_cc.sh",
        "strip": "noop_cc.sh",
    },
)

cc_toolchain(
    name = "wasm_cc_toolchain_impl",
    all_files = ":wasm_cc_tools",
    compiler_files = ":wasm_cc_tools",
    dwp_files = ":wasm_cc_tools",
    linker_files = ":wasm_cc_tools",
    objcopy_files = ":wasm_cc_tools",
    strip_files = ":wasm_cc_tools",
    toolchain_config = ":wasm_cc_config",
)

toolchain(
    name = "wasm_cc_toolchain",
    toolchain = ":wasm_cc_toolchain_impl",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
    target_compatible_with = [
        "@platforms//cpu:wasm32",
        "@platforms//os:none",
    ],
)
