load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("//:defs.bzl", "native_only_crates", "wasm_aware_crates")

exports_files(["Cargo.toml"])

# Bridge crates: provide a second extern name for crates that collide in the
# aliases dict (same spoke target, different workspace alias). See docs/bazel-notes.md.
# L7 bridges (L7 alias loses to L8 in dict dedup)
rust_library(
    name = "_coin_structure_bridge",
    crate_name = "coin_structure",
    srcs = ["bridges/coin_structure.rs"],
    deps = ["@crates__midnight-coin-structure-2.0.1//:midnight_coin_structure"],
    edition = "2024",
    visibility = ["//ledger:__pkg__"],
)

rust_library(
    name = "_transient_crypto_bridge",
    crate_name = "transient_crypto",
    srcs = ["bridges/transient_crypto.rs"],
    deps = ["@crates__midnight-transient-crypto-2.0.1//:midnight_transient_crypto"],
    edition = "2024",
    visibility = ["//ledger:__pkg__"],
)

rust_library(
    name = "_zkir_bridge",
    crate_name = "zkir",
    srcs = ["bridges/zkir.rs"],
    deps = ["@crates//:midnight-zkir"],
    edition = "2024",
)

# L8 bridges (L8 alias loses to L7 in dict dedup)
rust_library(
    name = "_mn_ledger_8_bridge",
    crate_name = "mn_ledger_8",
    srcs = ["bridges/mn_ledger_8.rs"],
    deps = ["@crates__midnight-ledger-8.0.2//:midnight_ledger"],
    edition = "2024",
    visibility = ["//ledger:__pkg__"],
)

rust_library(
    name = "_zswap_ledger_8_bridge",
    crate_name = "zswap_ledger_8",
    srcs = ["bridges/zswap_ledger_8.rs"],
    deps = ["@crates__midnight-zswap-8.0.0//:midnight_zswap"],
    edition = "2024",
    visibility = ["//ledger:__pkg__"],
)

rust_library(
    name = "midnight-node-ledger-helpers",
    srcs = glob(["src/**/*.rs"]),
    compile_data = glob(["static/**"], allow_empty = True) + ["//:Cargo.toml", "Cargo.toml"],
    crate_features = [
        "can-panic",
        "test-utils",
    ],
    edition = "2024",
    aliases = select({
        "//:wasm32": {},
        "//conditions:default": {
            # L7 aliases
            "@crates//:midnight-base-crypto-1.0.0": "base_crypto",
            "@crates//:midnight-ledger-7.0.3": "mn_ledger",
            "@crates//:midnight-storage-1.1.1": "ledger_storage",
            "@crates//:midnight-onchain-runtime-2.0.1": "onchain_runtime",
            "@crates//:midnight-zswap-7.0.3": "zswap",
            # L8 aliases (only for deps that differ from L7)
            "@crates//:onchain_runtime_ledger_8": "onchain_runtime_ledger_8",
            "@crates//:ledger_storage_ledger_8": "ledger_storage_ledger_8",
        },
    }),
    deps = wasm_aware_crates([
        "hex",
        "log",
        "serde",
    ]) + native_only_crates([
        # L7 midnight deps (non-colliding use aliases, colliding use bridges)
        "midnight-base-crypto-1.0.0",
        "midnight-ledger-7.0.3",
        "midnight-onchain-runtime-2.0.1",
        "midnight-serialize",
        "midnight-storage-1.1.1",
        "midnight-zswap-7.0.3",
        # L8 midnight deps (only those that differ from L7)
        "onchain_runtime_ledger_8",
        "ledger_storage_ledger_8",
        # Other deps
        "bech32",
        "bip32",
        "bip39",
        "futures",
        "itertools",
        "lazy_static",
        "rand-0.8.5",
        "rayon",
        "serde_bytes",
        "serde_json",
        "subxt",
        "subxt-signer",
        "thiserror",
        "tokio",
        "toml",
    ]) + select({
        # Bridge deps and midnight-zkir only needed in native builds
        "//:wasm32": [],
        "//conditions:default": [
            ":_coin_structure_bridge",
            ":_transient_crypto_bridge",
            ":_zkir_bridge",
            ":_mn_ledger_8_bridge",
            ":_zswap_ledger_8_bridge",
        ],
    }),
    proc_macro_deps = [
        "@crates//:async-trait",
        "@crates//:derive-where",
    ],
    visibility = ["//visibility:public"],
)

rust_test(
    name = "midnight-node-ledger-helpers-test",
    size = "small",
    crate = ":midnight-node-ledger-helpers",
    compile_data = glob(["static/**"], allow_empty = True) + ["//:Cargo.toml", "Cargo.toml"],
    edition = "2024",
    aliases = {
        "@crates//:midnight-base-crypto-1.0.0": "base_crypto",
        "@crates//:midnight-ledger-7.0.3": "mn_ledger",
        "@crates//:midnight-storage-1.1.1": "ledger_storage",
        "@crates//:midnight-onchain-runtime-2.0.1": "onchain_runtime",
        "@crates//:midnight-zswap-7.0.3": "zswap",
        "@crates//:onchain_runtime_ledger_8": "onchain_runtime_ledger_8",
        "@crates//:ledger_storage_ledger_8": "ledger_storage_ledger_8",
    },
    proc_macro_deps = [
        "@crates//:async-trait",
        "@crates//:derive-where",
    ],
)
