[package]
name = "midnight-node-ledger-helpers"
version = "0.1.0"
edition = "2024"
license-file.workspace = true

[dependencies]
hex.workspace = true

mn-ledger = { workspace = true, features = ["proving", "test-utilities"] }
base-crypto = { workspace = true }
coin-structure = { workspace = true }
onchain-runtime = { workspace = true }
midnight-serialize = { workspace = true }
ledger-storage = { workspace = true }
transient-crypto = { workspace = true }
zswap = { workspace = true }
zkir = { workspace = true }

mn-ledger-8 = { workspace = true, features = ["proving", "test-utilities"] }
onchain-runtime-ledger-8 = { workspace = true }
ledger-storage-ledger-8 = { workspace = true }
zswap-ledger-8 = { workspace = true }

mn-ledger-hf = { workspace = true, features = ["proving", "test-utilities"], optional = true }
base-crypto-hf = { workspace = true, optional = true }
coin-structure-hf = { workspace = true, optional = true }
onchain-runtime-hf = { workspace = true, optional = true }
midnight-serialize-hf = { workspace = true, optional = true }
ledger-storage-hf = { workspace = true, optional = true }
transient-crypto-hf = { workspace = true, optional = true }
zswap-hf = { workspace = true, optional = true }
zkir-hf = { workspace = true, optional = true }

rand = { workspace = true, features = ["small_rng"] }
log.workspace = true
lazy_static.workspace = true
itertools = { workspace = true, features = ["use_alloc"] }
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
bip32.workspace = true
derive-where.workspace = true
serde = { workspace = true, features = ["derive"] }
bech32 = "0.11.0"
bip39 = "2.0.0"
toml.workspace = true
subxt.workspace = true
subxt-signer.workspace = true
serde_json.workspace = true

[features]
default = ["hardfork"]
hardfork = [
    "mn-ledger-hf",
    "base-crypto-hf",
    "coin-structure-hf",
    "onchain-runtime-hf",
    "midnight-serialize-hf",
    "ledger-storage-hf",
    "transient-crypto-hf",
    "zswap-hf",
    "zkir-hf",
]
can-panic = []
erase-proof = []
test-utils = []
fixed-point-custom-serde = ["mn-ledger/fixed-point-custom-serde", "mn-ledger-8/fixed-point-custom-serde"]
