[package]
name = "pallet-collective-proposer-cancel"
version = "0.1.0"
edition = "2024"
description = "Allow the original proposer to cancel a pallet_collective proposal early"
license-file.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
frame-support.workspace = true
frame-system.workspace = true
pallet-collective.workspace = true
sp-runtime.workspace = true

[dev-dependencies]
sp-core.workspace = true
sp-io.workspace = true
pallet-membership.workspace = true
runtime-common.workspace = true

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-collective/std",
    "pallet-membership/std",
    "runtime-common/std",
    "sp-runtime/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-collective/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-collective/try-runtime",
]

[package.metadata.cargo-shear]
ignored = ["parity-scale-codec", "scale-info"]
