[package]
name = "pallet-consensus-config"
version = "0.1.0"
edition = "2024"
description = "Midnight consensus configuration pallet — stores mainchain epoch parameters on-chain"
license-file.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec.workspace = true
frame-support.workspace = true
frame-system.workspace = true
scale-info.workspace = true
sp-runtime.workspace = true
sp-api.workspace = true
sp-crypto-hashing.workspace = true

[dev-dependencies]
sp-io = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }

[features]
default = ["std"]
try-runtime = []
std = [
    "parity-scale-codec/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-api/std",
    "sp-crypto-hashing/std",
]

[package.metadata.cargo-shear]
ignored = ["scale-info"]
