load("@rules_rust//rust:defs.bzl", "rust_library")
load("//:defs.bzl", "wasm_aware_crates", "wasm_aware_features")

exports_files(["Cargo.toml"])

rust_library(
    name = "pallet-federated-authority-observation",
    srcs = glob(["src/**/*.rs"]),
    compile_data = ["Cargo.toml"],
    crate_features = wasm_aware_features(["std"]),
    edition = "2024",
    deps = [
        "//primitives/federated-authority-observation:midnight-primitives-federated-authority-observation",
    ] + wasm_aware_crates([
        "frame-support",
        "frame-system",
        "log",
        "parity-scale-codec",
        "scale-info",
        "sidechain-domain",
        "sp-inherents",
    ]),
    visibility = ["//visibility:public"],
)
