load("@rules_rust//rust:defs.bzl", "rust_library")

exports_files(["Cargo.toml"])

rust_library(
    name = "pallet-federated-authority",
    srcs = glob(["src/**/*.rs"]),
    compile_data = ["Cargo.toml"],
    crate_features = ["std"],
    edition = "2024",
    deps = [
        "@crates//:frame-support",
        "@crates//:frame-system",
        "@crates//:log",
        "@crates//:parity-scale-codec",
        "@crates//:scale-info",
        "@crates//:sp-runtime",
    ],
    proc_macro_deps = [
        "@crates//:impl-trait-for-tuples",
    ],
    visibility = ["//visibility:public"],
)
