load("@rules_rust//rust:defs.bzl", "rust_library")
load("//:defs.bzl", "wasm_aware_crates", "wasm_aware_features")

exports_files(["Cargo.toml"])

rust_library(
    name = "pallet-federated-authority",
    srcs = glob(["src/**/*.rs"]),
    compile_data = ["Cargo.toml"],
    crate_features = wasm_aware_features(["std"]),
    edition = "2024",
    deps = wasm_aware_crates([
        "frame-support",
        "frame-system",
        "log",
        "parity-scale-codec",
        "scale-info",
        "sp-runtime",
    ]),
    proc_macro_deps = [
        "@crates//:impl-trait-for-tuples",
    ],
    visibility = ["//visibility:public"],
)
