load("@rules_rust//rust:defs.bzl", "rust_library")
load("//:defs.bzl", "wasm_aware_crates", "wasm_aware_features")

exports_files(["Cargo.toml"])

rust_library(
    name = "pallet-midnight-system",
    srcs = glob(["src/**/*.rs"]),
    crate_features = wasm_aware_features(["std"]),
    edition = "2024",
    compile_data = ["Cargo.toml"],
    deps = [
        "//ledger:midnight-node-ledger",
        "//primitives/midnight:midnight-primitives",
    ] + wasm_aware_crates([
        "frame-support",
        "frame-system",
        "parity-scale-codec",
        "scale-info",
    ]),
    visibility = ["//visibility:public"],
)
