load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("//:defs.bzl", "wasm_aware_crates", "wasm_aware_features")

exports_files(["Cargo.toml"])

rust_library(
    name = "pallet-midnight",
    srcs = glob(["src/**/*.rs"]),
    crate_features = wasm_aware_features(["std"]),
    edition = "2024",
    compile_data = ["Cargo.toml"],
    deps = [
        "//ledger:midnight-node-ledger",
        "//primitives/midnight:midnight-primitives",
    ] + wasm_aware_crates([
        "frame-support",
        "frame-system",
        "log",
        "pallet-timestamp",
        "parity-scale-codec",
        "scale-info",
        "sidechain-domain",
        "sp-api",
        "sp-runtime",
        "sp-tracing",
    ]),
    visibility = ["//visibility:public"],
)

rust_test(
    name = "pallet-midnight-test",
    size = "small",
    crate = ":pallet-midnight",
    compile_data = ["Cargo.toml"],
    crate_features = ["std"],
    edition = "2024",
    env = {
        "HOME": "/tmp",
    },
    deps = [
        "//ledger/helpers:midnight-node-ledger-helpers",
        "//res:midnight-node-res-test",
        "@crates//:assert_matches",
        "@crates//:hex",
        "@crates//:sp-core",
        "@crates//:sp-io",
        "@crates//:tempfile",
        "@crates//:test-log",
    ],
)
