load("@rules_rust//rust:defs.bzl", "rust_library")

exports_files(["Cargo.toml"])

rust_library(
    name = "pallet-system-parameters",
    srcs = glob(["src/**/*.rs"]),
    compile_data = ["Cargo.toml"],
    crate_features = ["std"],
    edition = "2024",
    deps = [
        "@crates//:frame-support",
        "@crates//:frame-system",
        "@crates//:parity-scale-codec",
        "@crates//:scale-info",
        "@crates//:serde",
        "@crates//:sidechain-domain",
        "@crates//:sp-api",
        "@crates//:sp-core",
        "@crates//:sp-runtime",
    ],
    visibility = ["//visibility:public"],
)
