load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("//:defs.bzl", "wasm_aware_crates", "wasm_aware_features")

exports_files(["Cargo.toml"])

rust_library(
    name = "pallet-system-parameters",
    srcs = glob(["src/**/*.rs"]),
    compile_data = ["Cargo.toml"],
    crate_features = wasm_aware_features(["std"]),
    edition = "2024",
    deps = wasm_aware_crates([
        "frame-support",
        "frame-system",
        "parity-scale-codec",
        "scale-info",
        "serde",
        "sidechain-domain",
        "sp-api",
        "sp-core",
        "sp-runtime",
    ]),
    visibility = ["//visibility:public"],
)

rust_test(
    name = "pallet-system-parameters-test",
    size = "small",
    crate = ":pallet-system-parameters",
    compile_data = ["Cargo.toml"],
    crate_features = ["std"],
    edition = "2024",
    deps = [
        "@crates//:sp-io",
    ],
)
